# banking-fraud-detection-lab

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.scratch/: v0.3-delivery-context.md
LICENSES/: CODE-MIT.md  CONTENT-CC-BY-NC-4.0.md
docs/: ROADMAP.md
notebooks/: README.md
sql/: README.md
tests/: conftest.py  private_banking_test_constants.py  test_alert_governance_notebook.py  test_alert_review_governance_notebook.py  test_alpine_crest_case_narrative_notebook.py  test_alpine_crest_graph_notebook.py  test_alpine_crest_interpretability_notebook.py  test_alpine_crest_monitoring_notebook.py  test_capstone_datasets.py  test_capstone_docs.py  test_capstone_rubric.py  test_capstone_scoring_notebook.py  test_capstone_sql.py  test_capstone_synthesis_notebook.py  test_case_library_metadata.py  test_ci_quality_gates.py  test_dataset_quality_report.py  test_dependabot_config.py  test_detection_patterns.py  test_digital_alert_triage_notebook.py  test_digital_banking_features.py  test_digital_feature_engineering_notebook.py  test_digital_fraud_scenarios.py  test_digital_scam_to_mule_notebook.py  test_digital_scam_to_mule_scenario.py  test_digital_supervised_baseline_notebook.py  test_evaluation_metrics.py  test_foundations_notebook.py  test_fp_concentration_and_threshold.py  test_generator_determinism.py  test_generator_entities.py  test_governance_memo_notebook.py  test_governance_template.py  test_graph.py  test_graph_features.py  test_interpretability.py  (+37 more)
(+217 files in other folders)
